--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,70 +8,66 @@ on:
 
 jobs:
   build-and-test:
-    name: ${{ matrix.os }} • ${{ matrix.compiler }} • ${{ matrix.build_type }}
-    runs-on: ${{ matrix.os }}
+    name: ${{ matrix.config.os }} • ${{ matrix.config.compiler }} • ${{ matrix.config.build_type }}
+    runs-on: ${{ matrix.config.os }}
     strategy:
       fail-fast: false
       matrix:
-        build_type: [Release]
-        include:
-          - os: ubuntu-latest
-            compiler: gcc
-            c: gcc
-            cxx: g++
-            generator: Ninja
-          - os: ubuntu-latest
-            compiler: clang
-            c: clang
-            cxx: clang++
-            generator: Ninja
-          - os: windows-latest
-            compiler: msvc
-            c: cl
-            cxx: cl
-            generator: Ninja
+        config:
+          - { os: ubuntu-latest, compiler: gcc,   c: gcc,   cxx: g++,     generator: Ninja, build_type: Release }
+          - { os: ubuntu-latest, compiler: clang, c: clang, cxx: clang++, generator: Ninja, build_type: Release }
+          - { os: windows-latest, compiler: msvc, c: cl,    cxx: cl,      generator: Ninja, build_type: Release }
 
     steps:
       - uses: actions/checkout@v4
 
+      - name: Show matrix selection
+        run: |
+          echo "os=${{ matrix.config.os }}"
+          echo "compiler=${{ matrix.config.compiler }}"
+          echo "c=${{ matrix.config.c }}"
+          echo "cxx=${{ matrix.config.cxx }}"
+          echo "gen=${{ matrix.config.generator }}"
+
+
       # MSVC environment for cl.exe
       - name: Set up MSVC developer command prompt
-        if: matrix.os == 'windows-latest'
+        if: matrix.config.os == 'windows-latest'
         uses: ilammy/msvc-dev-cmd@v1
 
       # Speed up Linux builds with ccache
       - name: Set up ccache
-        if: startsWith(matrix.os, 'ubuntu')
+        if: startsWith(matrix.config.os, 'ubuntu')
         uses: hendrikmuhs/ccache-action@v1
         with:
-          key: ${{ runner.os }}-${{ matrix.compiler }}-${{ matrix.build_type }}
+          key: ${{ runner.os }}-${{ matrix.config.compiler }}-${{ matrix.config.build_type }}
 
       # Configure on Linux (with ccache)
       - name: Configure (Linux)
-        if: startsWith(matrix.os, 'ubuntu')
+        if: startsWith(matrix.config.os, 'ubuntu')
         run: >
           cmake -S . -B build
-          -G "${{ matrix.generator }}"
-          -DCMAKE_C_COMPILER=${{ matrix.c }}
-          -DCMAKE_CXX_COMPILER=${{ matrix.cxx }}
+          -G "${{ matrix.config.generator }}"
+          -DCMAKE_C_COMPILER=${{ matrix.config.c }}
+          -DCMAKE_CXX_COMPILER=${{ matrix.config.cxx }}
           -DCMAKE_C_COMPILER_LAUNCHER=ccache
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
           -DBUILD_TESTING=ON
 
       # Configure on Windows (MSVC)
       - name: Configure (Windows)
-        if: matrix.os == 'windows-latest'
+        if: matrix.config.os == 'windows-latest'
         run: >
           cmake -S . -B build
-          -G "${{ matrix.generator }}"
-          -DCMAKE_C_COMPILER=${{ matrix.c }}
-          -DCMAKE_CXX_COMPILER=${{ matrix.cxx }}
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -G "${{ matrix.config.generator }}"
+          -DCMAKE_C_COMPILER=${{ matrix.config.c }}
+          -DCMAKE_CXX_COMPILER=${{ matrix.config.cxx }}
+          -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
           -DBUILD_TESTING=ON
 
       - name: Build
-        run: cmake --build build --config ${{ matrix.build_type }} -j 2
+        run: cmake --build build --config ${{ matrix.config.build_type }} -j 2
 
       - name: Run tests (ctest)
         working-directory: build
@@ -79,21 +75,21 @@ jobs:
           CTEST_OUTPUT_ON_FAILURE: 1
           GTEST_COLOR: 1
         run: >
-          ctest --build-config ${{ matrix.build_type }}
+          ctest --build-config ${{ matrix.config.build_type }}
           --output-on-failure -j 2
-          --output-junit "ctest-${{ matrix.os }}-${{ matrix.compiler }}.xml"
+          --output-junit "ctest-${{ matrix.config.os }}-${{ matrix.config.compiler }}.xml"
 
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: ctest-${{ matrix.os }}-${{ matrix.compiler }}-${{ matrix.build_type }}
+          name: ctest-${{ matrix.config.os }}-${{ matrix.config.compiler }}-${{ matrix.config.build_type }}
           path: build/ctest-*.xml
           if-no-files-found: ignore
           retention-days: 14
 
       - name: ccache stats
-        if: startsWith(matrix.os, 'ubuntu')
+        if: startsWith(matrix.config.os, 'ubuntu')
         run: ccache -s
 
   sanitize:
